--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="flutter_template">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- TODO: Add your Google Maps API key here -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJnCcTOybPNcNeXX2zDkmmC-IYmmt6WtE"></script>
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
