--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,8 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJnCcTOybPNcNeXX2zDkmmC-IYmmt6WtE"></script>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/X-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <title>flutter_template</title>
   <link rel="manifest" href="manifest.json">
