--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAJnCcTOybPNcNeXX2zDkmmC-IYmmt6WtE"></script>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/X-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <title>flutter_template</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "4234926292";
+    const serviceWorkerVersion = "1489011349";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
